--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.48",
+        "laravel/pint": "^1.13",
         "mockery/mockery": "^1.4.4",
+        "pestphp/pest": "^2.33",
         "phpunit/phpunit": "^10.0"
     },
     "autoload": {
@@ -36,7 +39,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
